// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the snapshot 1`] = `
<div
  class="css-17ii8se"
>
  <div
    class="css-1fction"
  >
    Header content
  </div>
</div>
`;

exports[`PaddedContainer matches the snapshot 1`] = `
<div
  class="ui container css-t6mvr8"
>
  Header content
</div>
`;
